--- a/src/textual_dev/previews/colors.css
+++ b/src/textual_dev/previews/colors.css
@@ -12,7 +12,7 @@ ColorButtons>Button {
     width: 100%;
 }
 
-ColorsView, NamedColorsView, DesignColorView {
+ColorsView {
     width: 100%;
     height: 100%;
     align: center middle;
